Fixed unwanted searches on enter key

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -327,3 +327,11 @@ p.control-group {
   font-size: 1.2em;
   text-align: left;
 }
+
+
+// Styling game upload/edit form
+.input-for-game div label {
+  color: black;
+  text-align: left;
+  margin: 10px;
+}
