--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -9,7 +9,7 @@
   <%= f.error_notification %>
   <%= @game.errors.full_messages.join(", ") %>
 
-  <div class="form-inputs">
+  <div class="form-inputs input-for-game">
     <%= f.input :title %>
     <%= f.input :description %>
     <%= f.input :picture %>
