--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,1 +1,5 @@
-<%= render 'form' %>
+<div class="container" style="margin-bottom: 50px">
+  <h1 style="font-weight:bold; margin-bottom: 20px; color: #EF7030;">Upload A New Game</h1>
+
+  <%= render 'form' %>
+</div>
