--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -1,7 +1,6 @@
 <!-- DEVS GAME UPLOAD PAGE -->
-<div class ="upload container">
-  <h1>Upload a New Game</h1>
-  <p class ="control-group">
+<div class ="container upload">
+  <p class ="control-group" style="text-align: left; color: #333;">
     Note: Game must meet the following minimum hardware specs. Every
     game will be tested. If it cannot be run, it will be rejected.
   </p>
