--- a/app/views/games/_index_admin.html.erb
+++ b/app/views/games/_index_admin.html.erb
@@ -1,16 +1,12 @@
 <h1 class="games-index-h1">Games Requiring Review</h1>
-
-<!-- All games are contained in a div -->
 <% if @games.present? %>
-<div class="needs review">
     <% @games.each do |g|  %>
-    <!-- Each game is in a div  -->
-    <div class="wrap">
-        <div class="game-picture"><%= display_picture g %></div>
-        <div class="gamer-details">
+    <div class="wrapper">
+        <div class="one"><%= display_picture g %></div>
+        <div class="two">
             <h2><%= link_to g.title, game_path(g), class: "game-title" %></h2>
             <div>
-                <p>made by:
+                <p class ="gamer-details-author">made by:
                     <%= link_to g.user.company, user_path(g.user) %></p>
                 <hr style="border-color: #333;">
                 <% g.tags.each do |t| %>
@@ -18,7 +14,7 @@
                     <%= t.name %>
                 </p>
                 <% end %>
-                <p class="game-status" style="color: #45A056; font-weight: bold;"><%= g.status.name %></p>
+                <p class="game-status" style="color: #45A056; font-weight: bold margin-top: 15px;"><%= g.status.name %></p>
             </div>
         </div>
     </div>
