--- a/app/views/layouts/_nav_dev.html.erb
+++ b/app/views/layouts/_nav_dev.html.erb
@@ -1,6 +1,5 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid" id="nav-wrapper">
-        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
@@ -15,27 +14,25 @@
             </div>
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     <%= link_to "Games", games_path	 %>
                 </li>
                 <li>
-                  <a>Welcome, <%= current_user.company %></a>
+                    <a>Welcome,
+                        <%= current_user.company %></a>
                 </li>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" style="color: white" aria-expanded="false"><span class="caret"></span>My Profile</a>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" style="color: white" aria-expanded="false">
+                        <span class="caret"></span>My Profile</a>
                     <ul class="dropdown-menu">
-                      <!-- add stuff later. Need different menues for admin vs dev -->
-                      <li><%= link_to "Game Overview", games_path %></li>
-                      <li><%= link_to "Upload", new_game_path %></li>
-                      <li><%= link_to "Key Mapping", root_path %></li>
-                      <li><%= link_to "Sign Out", sessions_path, method: :delete %></li>
+                        <li><%= link_to "Game Overview", games_path %></li>
+                        <li><%= link_to "Upload", new_game_path %></li>
+                        <li><%= link_to "Key Mapping", root_path %></li>
+                        <li><%= link_to "Sign Out", sessions_path, method: :delete %></li>
                     </ul>
-                  </li>
-                <!-- PLACEHOLDER - BROWSE FOR GAMES -->
+                </li>
                 <li class="game-search">
                     <a href="" class="dropdown-toggle" data-toggle="dropdown">
                         <span class="glyphicon glyphicon-search" id="search"></span>
@@ -47,7 +44,5 @@
                 </li>
             </ul>
         </div>
-        <!-- /.navbar-collapse -->
     </div>
-    <!-- /.container-fluid -->
 </nav>
