--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -19,8 +19,8 @@
       <input id="file-display" class="input-large uneditable-input" type="text">
       <a id="upload-btn" class="btn"><i class="icon-upload-alt"></i>Upload</a>
     </div>
-  </div> <!-- /attach-set -->
-</div> <!-- /control-group -->
+  </div>
+</div>
 
   <div class="form-actions register-form-group">
     <%= f.button :submit, class: "btn btn-default register-button" %>
