--- a/app/views/games/_index_gamer.html.erb
+++ b/app/views/games/_index_gamer.html.erb
@@ -1,30 +1,25 @@
 <h1 class="games-index-h1">All Games</h1>
- <!-- All games are contained in a div -->
- <% if @games.present? %>
-   <% @games.each do |g|  %>
-   <!-- Each game is in a div  -->
-     <div class="wrapper">
-       <div class="one"><%= display_picture g %></div>
-       <div class="two">
-         <h3><%= link_to g.title, game_path(g), class: "game-title" %></h3>
-         <div>
-         <p class="gamer-details-author">made by: <%= link_to g.user.company, user_path(g.user) %></p>
-         <hr style="border-color: #333;">
-
-         <% g.tags.each do |t| %>
-          <p class="tag-boxes">
-            <%= t.name %>
-          </p>
-         <% end %>
-
-         <p class = "game-status" style="color: #45A056; font-weight: bold; margin-top: 15px;"><%= g.status.name %></p>
-
-         </div>
-       </div>
-       <!-- </div> -->
-     </div>
-     <% end %>
- <% else %>
-   <p>There are no matches for your search</p>
- <% end %>
- <%= paginate @games %>
+<% if @games.present? %>
+<% @games.each do |g|  %>
+<div class="wrapper">
+    <div class="one"><%= display_picture g %></div>
+    <div class="two">
+        <h3><%= link_to g.title, game_path(g), class: "game-title" %></h3>
+        <div>
+            <p class="gamer-details-author">made by:
+                <%= link_to g.user.company, user_path(g.user) %></p>
+            <hr style="border-color: #333;">
+            <% g.tags.each do |t| %>
+            <p class="tag-boxes">
+                <%= t.name %>
+            </p>
+            <% end %>
+            <p class="game-status" style="color: #45A056; font-weight: bold; margin-top: 15px;"><%= g.status.name %></p>
+        </div>
+    </div>
+</div>
+<% end %>
+<% else %>
+<p>There are no matches for your search</p>
+<% end %>
+<%= paginate @games %>
