--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,93 +1,91 @@
-
-<!-- IMAGE CAROUSEL -->
 <div>
-
-  <div id="home-slideshow" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#home-slideshow" data-slide-to="0" class="active"></li>
-      <li data-target="#home-slideshow" data-slide-to="1"></li>
-      <li data-target="#home-slideshow" data-slide-to="2"></li>
-    </ol>
-
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <%= image_tag "http://s3.amazonaws.com/digitaltrends-uploads-prod/2016/04/HLD-Header.jpg", class: "carousel-image" %>
-      </div>
-      <div class="item">
-        <%= image_tag "http://blogs-images.forbes.com/erikkain/files/2016/01/February-Indie-Games-1200x676.jpg", class: "carousel-image" %>
-      </div>
-      <div class="item">
-        <%= image_tag "http://cdn.wccftech.com/wp-content/uploads/2016/01/Deaths-Gambit.jpg", class: "carousel-image" %>
-      </div>
+    <div id="home-slideshow" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#home-slideshow" data-slide-to="0" class="active"></li>
+            <li data-target="#home-slideshow" data-slide-to="1"></li>
+            <li data-target="#home-slideshow" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <%= image_tag "http://s3.amazonaws.com/digitaltrends-uploads-prod/2016/04/HLD-Header.jpg", class: "carousel-image" %>
+            </div>
+            <div class="item">
+                <%= image_tag "http://blogs-images.forbes.com/erikkain/files/2016/01/February-Indie-Games-1200x676.jpg", class: "carousel-image" %>
+            </div>
+            <div class="item">
+                <%= image_tag "http://cdn.wccftech.com/wp-content/uploads/2016/01/Deaths-Gambit.jpg", class: "carousel-image" %>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
-
-
-<div class = "home-intro">
-  <div >
-    <br>
-    <br>
-    <h1>Welcome to Indie Arcade</h1>
-    <br>
-    <div class="col-lg-8 col-lg-offset-2">
-      We provide a unique and free gaming experience for arcades around Vancouver. This project showcases Indie games made locally in British Columbia to the general public. Our app will enable Game Developers to receieve diagnostics and reviews from the public after they play the game!
+<div class="home-intro">
+    <div >
+        <br>
+        <br>
+        <h1>Welcome to Indie Arcade</h1>
+        <br>
+        <div class="col-lg-8 col-lg-offset-2">
+            We provide a unique and free gaming experience for arcades around Vancouver. This project showcases Indie games made locally in British Columbia to the general public. Our app will enable Game Developers to receieve diagnostics and reviews from the
+            public after they play the game!
+        </div>
     </div>
-  </div>
 </div>
 
 <div class="home-map-intro">
-  <div class="container">
-    <span>
-      Check out the map to see the location of arcades and the games that are available.
-    </span>
-  </div>
-</div>
-
-<div class = "home-map">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2602.8146115334225!2d-123.12360358469927!3d49.279909979330995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5486717e2b2312ad%3A0x6e114250e5ff0091!2sMovieland+Arcade!5e0!3m2!1sen!2sca!4v1473538365086" width="100%" height="450" frameborder="0" style="border:10px" allowfullscreen></iframe>
-</div>
-
-<!-- Social Media -->
-
-<div class = "home-social-media">
-  <div class="container">
-    <div class="col-lg-12">
-      <h1>STAY CONNECTED</h1>
-        <div class="col-lg-8 col-lg-offset-2">
-            <ul class="list-inline text-center">
-                <li>
-                  <span class="fa-stack fa-lg">
-                      <a href = "http://www.twitter.com"><i class="fa fa-circle fa-stack-2x"></i>
-                      <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                      </a>
-                </li>
-                <li>
-                  <span class="fa-stack fa-lg">
-                    <a href = "http://www.facebook.com"><i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                    </a>
-                  </span>
-                </li>
-                <li>
-                  <span class="fa-stack fa-lg">
-                    <a href = "http://www.instagram.com"><i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
-                    </a>
-                  </span>
-                </li>
-                <li>
-                  <span class="fa-stack fa-lg">
-                    <a href = "http://www.youtube.com"><i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
-                    </a>
-                  </span>
-                </li>
-            </ul>
-        </div>
-      </div>
+    <div class="container">
+        <span>
+            Check out the map to see the location of arcades and the games that are available.
+        </span>
     </div>
 </div>
+<div class="home-map">
+    <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2602.8146115334225!2d-123.12360358469927!3d49.279909979330995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5486717e2b2312ad%3A0x6e114250e5ff0091!2sMovieland+Arcade!5e0!3m2!1sen!2sca!4v1473538365086"
+        width="100%"
+        height="450"
+        frameborder="0"
+        style="border:10px"
+        allowfullscreen></iframe>
+</div>
+<div class="home-social-media">
+    <div class="container">
+        <div class="col-lg-12">
+            <h1>STAY CONNECTED</h1>
+            <div class="col-lg-8 col-lg-offset-2">
+                <ul class="list-inline text-center">
+                    <li>
+                        <span class="fa-stack fa-lg">
+                            <a href="http://www.twitter.com">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <span class="fa-stack fa-lg">
+                                <a href="http://www.facebook.com">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                                </a>
+                            </span>
+                        </li>
+                        <li>
+                            <span class="fa-stack fa-lg">
+                                <a href="http://www.instagram.com">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+                                </a>
+                            </span>
+                        </li>
+                        <li>
+                            <span class="fa-stack fa-lg">
+                                <a href="http://www.youtube.com">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+                                </a>
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
