--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,13 +14,13 @@
 
 <div class="control-group">
   <div class="attach-set text-center">
-    <%= f.input :logo, input_html: { class: 'hidden-input' }, label: 'Upload company logo' %>
+    <%= f.input :logo, input_html: { class: 'hidden-input' }, label: 'Upload company logo'%>
     <div class="input-append">
       <input id="file-display" class="input-large uneditable-input" type="text">
       <a id="upload-btn" class="btn"><i class="icon-upload-alt"></i>Upload</a>
     </div>
-  </div> <!-- /attach-set -->
-</div> <!-- /control-group -->
+  </div>
+</div>
 
   <div class="form-actions register-form-group">
     <%= f.button :submit, class: "btn btn-default register-button" %>
