--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,56 +1,73 @@
+    <div id="index-bg">
+        <div style="width: 90%; margin: auto">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="container-dev-games">
+                      <div id="dev-info">
+                          <div style="text-align: center">
+                              <div id="dev-logo" style="background-image: url('<%= @user.logo %>')"></div>
+                          </div>
+                          <div style="padding: 10px">
+                              <h4>
+                                  <strong>Company:</strong>
+                                  <%= @user.company %>
+                              </h4>
 
-<div id="developer-page-wrapper" class="row">
-  <div id="dev-background-color">
-    <div id="dev-info">
-      <div style="text-align: center">
-        <div id="dev-logo" style="background-image: url('<%= @user.logo %>')"></div>
-      </div>
-    <div style="padding: 10px">
+                              <h4>
+                                  <strong>Email:</strong>
+                                  <%= @user.email %>
+                              </h4>
 
-      <h4>
-        <strong>Company:</strong>
-        <%= @user.company %>
-      </h4>
+                              <h4>
+                                  <strong>Employees:</strong>
+                                  <%= @user.employees %>
+                              </h4>
 
-      <h4>
-        <strong>Email:</strong>
-        <%= @user.email %>
-      </h4>
+                              <h4>
+                                  <strong>Genres:</strong>
+                                  <%= @user.genres %>
+                              </h4>
 
-      <h4>
-        <strong>Employees:</strong>
-        <%= @user.employees %>
-      </h4>
+                              <h4>
+                                  <strong>Website:</strong>
+                                  <%= @user.website %>
+                              </h4>
 
-      <h4>
-        <strong>Genres:</strong>
-        <%= @user.genres %>
-      </h4>
+                              <h4>
+                                  <strong>Twitter:</strong>1
+                                  <%= @user.twitter %>
+                              </h4>
+                          </div>
+                      </div>
+                    </div>
+                </div>
+                <div class="col-sm-8">
+                  <% if @games.present? %>
+                  <h1 class="games-index-h1">Games by: <%= @games.first.user.company %></h1>
+                  <% @games.each do |g|  %>
+                  <div class="wrapper">
+                      <div class="one"><%= display_picture g %>
 
-      <h4>
-        <strong>Website:</strong>
-        <%= @user.website %>
-      </h4>
+                      </div>
+                      <div class="two">
+                          <h3><%= link_to g.title, game_path(g), class: "game-title" %></h3>
+                          <div>
+                              <p class="gamer-details-author">made by:
+                                  <%= link_to g.user.company, user_path(g.user) %></p>
+                              <hr style="border-color: #333;">
+                              <% g.tags.each do |t| %>
+                              <p class="tag-boxes">
+                                  <%= t.name %>
+                              </p>
+                              <% end %>
+                              <p class="game-status" style="color: #45A056; font-weight: bold; margin-top: 15px;"><%= g.status.name %></p>
+                          </div>
+                      </div>
+                  </div>
+                  <% end %>
+                  <% end %>
 
-      <h4>
-        <strong>Twitter:</strong>1
-        <%= @user.twitter %>
-      </h4>
-    </div>
-
-  </div>
-  <div id="dev-games-list">
-    <% @games.each do |game| %>
-    <div class="individual-game-info">
-        <div id="game-picture" style="background-image: url('<%= game.picture %>'); display: inline-block"></div>
-        <div id="text-info" >
-          <h1 style="color: #003c62"><%= game.title %></h1>
-          <hr style="border: 1px solid ">
-          <h2><%= game.description %></h2>
+                </div>
+            </div>
         </div>
     </div>
-    <% end %>
-  </div>
-
-  </div>
-</div>
