--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -1,11 +1,8 @@
-<!-- DEVS GAME UPLOAD PAGE -->
-<div class ="upload container">
-  <h1>Upload a New Game</h1>
-  <p class ="control-group">
+<div class ="container upload">
+  <p class ="control-group" style="text-align: left; color: #333;">
     Note: Game must meet the following minimum hardware specs. Every
     game will be tested. If it cannot be run, it will be rejected.
   </p>
-
   <%= simple_form_for(@game) do |f| %>
   <%= f.error_notification %>
   <%= @game.errors.full_messages.join(", ") %>
@@ -20,7 +17,6 @@
     { multiple: true, class: 'chosen-select' }) %>
     <%= f.input :link %>
   </div>
-
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
