--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,5 +1,8 @@
-<div class="container" style="margin-bottom: 50px">
-  <h1 style="font-weight:bold; margin-bottom: 20px; color: #EF7030;">Upload A New Game</h1>
 
-  <%= render 'form' %>
+<div class="container" style="margin-bottom: 30px;">
+<h1 style="font-weight:bold; margin-top: 40px; margin-bottom: 40px; color: #EF7030;">Upload a New Game</h1>
+
+<%= render 'form' %>
+
+<div class="back-btn-update"><%= link_to '<<Back', games_path %></div>
 </div>
