--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
     <div id="home-slideshow" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#home-slideshow" data-slide-to="0" class="active"></li>
@@ -17,7 +17,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <div class="home-intro">
     <div >
         <br>
