--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
  * It is generally better to create a new file per style scope.
  */
 
+//*= require main
  //= require_tree .
  //= require font_awesome
  //= require chosen-compass
