--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -1,3 +1,8 @@
+@import "bootstrap-sprockets";
+@import "bootstrap";
+@import "font-awesome";
+
+
 .container-fluid, .dropdown-menu, .navbar-collapse {
   background-color: #003c62;
   font-family: 'Prompt', sans-serif;
@@ -9,5 +14,5 @@
     background-color: #4169ac;
 }
 
-@import "bootstrap-sprockets";
-@import "bootstrap";
+// @import "bootstrap-sprockets";
+// @import "bootstrap";
