--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,35 +11,23 @@
 
     <body>
         <div style="margin-top: 50px; min-height: 500px;">
-      <% if user_is_gamer? %>
-        <%= render 'layouts/nav_gamer' %>
-      <% end %>
-      <% if user_is_dev? %>
-        <%= render 'layouts/nav_dev' %>
-      <% end %>
-      <% if user_is_admin? %>
-        <%= render 'layouts/nav_admin' %>
-      <% end %>
-        <div style="margin-top: 50px; min-height: 500px;">
-          <%= yield %>
-        </div>
+        <% if user_is_gamer? %>
+          <%= render 'layouts/nav_gamer' %>
+        <% end %>
+        <% if user_is_dev? %>
+          <%= render 'layouts/nav_dev' %>
+        <% end %>
+        <% if user_is_admin? %>
+          <%= render 'layouts/nav_admin' %>
+        <% end %>
+          <div style="margin-top: 50px; min-height: 500px;">
+            <%= yield %>
+          </div>
+
+          <%= render "layouts/footer" %>
 
         <%= javascript_include_tag 'application' %>
 
-        <footer>
-            <div class="home-footer footer navbar-bottom">
-                <div class="home-footer-left">
-                    <div><%= image_tag "logo.png" %></div>
-                    <div><%= link_to "About", about_path %></div>
-                    <div><%= link_to "Contact", contact_path %></div>
-                    <div><%= link_to "FAQ", faq_path %></div>
-                </div>
-                <div class="home-footer-right">
-                    <div>WEBSITE MADE BY:</div>
-                    <div><%= image_tag "json-squad-logo.png", class: "json-logo" %></div>
-                    <div><%= image_tag "codecore-logo.png", class: "codecore-logo" %></div>
-                </div>
-            </div>
-        </footer>
+
         </body>
     </html>
