--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -3,11 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #index-bg {
-  background-image: url("games-bg.jpg");
-  background-color: #317484;
-  background-position: top;
-  background-repeat: no-repeat;
-  background-size: 100%;
+  // background-image: url("games-bg.jpg");
+  // background-color: #317484;
+  // background-position: top;
+  // background-repeat: no-repeat;
+  // background-size: 100%;
   width: 100%;
   min-height: 500px;
   padding-bottom: 20px;
@@ -350,9 +350,9 @@ label.control-label.radio_buttons.required {
   margin-bottom: 15px;
 }
 
-input.btn.btn-default {
-  margin-top: 20px;
-}
+// input.btn.btn-default {
+//   margin-top: 20px;
+// }
 
 .label-for-tags {
   margin-top: 20px;
@@ -443,4 +443,108 @@ p.control-group{
 
 input#game_picture.file.optional {
   color: #333;
+}
+
+
+
+
+//
+// version 2 team 7
+
+.round {
+  width: 80px;
+  height: 80px;
+  border-radius: 40px;
+  background-image: image-url('logo.png');
+  float: left;
+  top: 10px;
+  left: 10px;
+  padding-left: 10px;
+  padding-top: 50px;
+  margin-top: 10px;
+  margin-left: 10px;
+  text-align: center;
+}
+
+.game-grid {
+  display: flex;
+  flex-wrap: wrap;
+  // justify-content: space-between;
+  flex-flow: row wrap;
+}
+
+.game-item{
+  width: 250px;
+  height: 250px;
+  border-radius: 10px;
+  background: rgba(200, 200, 200, 0.5);
+  background-blend-mode: lighten;
+  // border: 1px solid white;
+  margin: 1rem 1rem 1rem 1rem;
+  flex-grow: 1;
+}
+
+.game-thumb {
+  width: 100px;
+  height: 100px;
+  border-radius: 5px;
+  background: rgba(200, 200, 200, 0.5);
+  background-blend-mode: lighten;
+  margin: 1rem 1rem 1rem 1rem;
+  flex-grow: 1;
+}
+
+.game-img {
+  align-items: flex-start;
+}
+
+.game-title {
+  align-self: flex-end;
+  padding-bottom: 0.2rem;
+}
+
+.grid-spacing{
+  margin-bottom: 5rem;
+}
+
+.linkA {
+  display: block;
+}
+
+
+
+
+
+
+
+
+.image-front {
+  width: 100%;
+}
+
+.page-divider {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
+.page-divider-semi {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.msg-form-spacing {
+  margin-top: 1rem;
+  margin-bottom: 1rem
+}
+
+.game-img {
+  max-height: 300px;
+}
+
+.btn-rejected {
+  background-color: red;
+}
+
+.btn-approved {
+  background-color: green;
 }
