--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -55,7 +55,7 @@ html, body {
 }
 .navbar-inverse{
   border-color: #090909;
-  background: none;
+  background: none !important;
   border: none;
 }
 
@@ -353,4 +353,106 @@ body{
   &.index{
     margin: 0 64px;
   }
+}
+
+
+// search from main
+
+.caret{
+  margin-right: 5px;
+}
+
+// #search-wrapper {
+//   // position: fixed;
+//   width: 100%;
+//   top: 0px;
+//   left: 0px;
+//   z-index: -1;
+//   transition: top 0.3s;
+// }
+//
+// #search-bar {
+//    background-color: #4169ac;
+//    border: none;
+//    border-radius: 0px;
+//    opacity: 0.95;
+//    font-color: white;
+//    height: 50px;
+// }
+//
+//
+// #search-bar::-webkit-input-placeholder {
+//   color: white;
+//   opacity: 0.5;
+// }
+//
+// #search-wrapper input[type='text']:focus {
+//   color: white;
+// }
+
+.game-search{
+  .glyphicon{
+    float: right;
+  }
+  #search-wrapper{
+    float: left;
+    margin-top: 11px;
+    margin-right: 13px;
+    display: none;
+    transition: all 1s;
+    &.moved {
+      display: block;
+    }
+  }
+}
+
+
+
+// END NAVBAR STYLING
+
+// FOOTER
+
+.home-footer {
+  height: 200px;
+  width: 100%;
+  overflow: hidden;
+  bottom: 0px;
+  left: 0px;
+  background-color: #003c62;
+  text-align: center;
+  font-family: 'Prompt', sans-serif;
+  color: white;
+  font-size: 12px;
+}
+
+.home-footer-left div {
+  margin-top: 15px;
+}
+.home-footer-right div {
+  margin-top: 15px;
+}
+
+
+.home-footer-left {
+  float: left;
+  text-align: left;
+  margin-left: 40px;
+  width: 30%;
+}
+
+.home-footer-right {
+  float: right;
+  text-align: right;
+  margin-right: 40px;
+  width: 30%;
+  font-size: 12px;
+  text-decoration: none;
+}
+.codecore-logo{
+  height: 50px;
+}
+
+
+.moved {
+  top: 50px !important;
 }
