--- a/app/views/layouts/_nav_gamer.html.erb
+++ b/app/views/layouts/_nav_gamer.html.erb
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<div class="container">
+  <nav class="navbar navbar-inverse">
     <div class="container-fluid" id="nav-wrapper">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -7,17 +8,18 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <div id="logo-container">
-                <a class="navbar-left" href="<%= root_path %>">
-                    <%= image_tag "logo.png" %>
-                </a>
-            </div>
+            <a class="navbar-brand"" href="<%= root_path %>">
+                <%= image_tag "logo-2.png", :class => "logo-nav" %>
+            </a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav">
                 <li>
                     <%= link_to "Games", games_path %>
                 </li>
+
+              </ul>
+            <ul class="nav navbar-nav navbar-right">
                 <% if user_signed_in? %>
                 <li>
                     <a>Welcome, <%= current_user.company %></a>
@@ -34,9 +36,8 @@
                   <li><%= link_to "Register", new_user_path %></li>
                 <% end %>
                 <li class="game-search">
-                    <a href="" class="dropdown-toggle" data-toggle="dropdown">
-                        <span class="glyphicon glyphicon-search" id="search"></span>
-                    </a>
+                    <span class="glyphicon glyphicon-search text-right" id="search"></span>
+
                     <form id="search-wrapper" action="/games" method="get">
                         <input type="text" name="search_main" class="form-control" name="search" placeholder="Search for a game or a studio" id="search-bar">
                         <button type="submit" class="btn btn-default" style="display: none">Submit</button>
@@ -45,4 +46,5 @@
             </ul>
         </div>
     </div>
-</nav>
+  </nav>
+</div>
