--- a/app/views/layouts/_nav_admin.html.erb
+++ b/app/views/layouts/_nav_admin.html.erb
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand"" href="<%= root_path %>">
-                <%= image_tag "logo-2.png", :class => "logo-nav" %>
+                <%= image_tag "logo-2.png", class: "logo-nav" %>
             </a>
         </div>
 
