--- a/app/views/layouts/_nav_gamer.html.erb
+++ b/app/views/layouts/_nav_gamer.html.erb
@@ -3,26 +3,25 @@
     <div class="container-fluid" id="nav-wrapper">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand"" href="<%= root_path %>">
-                <%= image_tag "logo-2.png", :class => "logo-nav" %>
+              <%= image_tag "logo-2.png", class: "logo-nav" %>
             </a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li>
-                    <%= link_to "Games", games_path %>
-                </li>
-
+              <li>
+                  <%= link_to "Games", games_path %>
+              </li>
               </ul>
             <ul class="nav navbar-nav navbar-right">
                 <% if user_signed_in? %>
                 <li>
-                    <a>Welcome, <%= current_user.company %></a>
+                  <a>Welcome, <%= current_user.company %></a>
                 </li>
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span>My Profile</a>
@@ -36,12 +35,11 @@
                   <li><%= link_to "Register", new_user_path %></li>
                 <% end %>
                 <li class="game-search">
-                    <span class="glyphicon glyphicon-search text-right" id="search"></span>
-
-                    <form id="search-wrapper" action="/games" method="get">
-                        <input type="text" name="search_main" class="form-control" name="search" placeholder="Search for a game or a studio" id="search-bar">
-                        <button type="submit" class="btn btn-default" style="display: none">Submit</button>
-                    </form>
+                  <span class="glyphicon glyphicon-search text-right" id="search"></span>
+                  <form id="search-wrapper" action="/games" method="get">
+                    <input type="text" name="search_main" class="form-control" name="search" placeholder="Search for a game or a studio" id="search-bar">
+                    <button type="submit" class="btn btn-default" style="display: none">Submit</button>
+                  </form>
                 </li>
             </ul>
         </div>
