--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,20 +1,8 @@
-
-$navbar-default-bg: #23649d;
-$body-bg: #23649d;
-$text-color: #e0dddf;
-$light-orange: #ff8c00;
-$navbar-default-color: $light-orange;
-$navbar-inverse-link-active-bg: rgba(255, 255, 255, 0.02);
-
-$btn-default-color:#92c9e1;
-$radius: 8px;
-
-@import "bootstrap";
+@import "variables";
 
 .resp{
 width: 100%;
 }
-
 
 * {
     margin: 0;
