add Game Uploader

--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -11,6 +11,8 @@
     <%= f.input :title %>
     <%= f.input :description %>
     <%= f.input :picture %>
+    <%= f.input :attachment %>
+
     <div class="label-for-tags">Tags</div>
     <%= f.collection_select(:tag_ids, Tag.all, :id, :name,
     {},
