--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -309,11 +309,19 @@ body{
   }
 }
 
+.game-search{
+  margin: 0 12px;
+}
+
 .pink{
   color: #f64b77;
 }
 
 .wrapper{
+  color: #333;
+}
+
+.wrapper-main{
   min-height: 600px;
 }
 
