--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -43,6 +43,7 @@
   </div>
 </div>
 <div id="searchresults" class="home-map row">
+  <div class="map index">
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2602.8146115334225!2d-123.12360358469927!3d49.279909979330995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5486717e2b2312ad%3A0x6e114250e5ff0091!2sMovieland+Arcade!5e0!3m2!1sen!2sca!4v1473538365086"
       width="100%"
@@ -51,4 +52,5 @@
       style="border:10px"
       allowfullscreen>
     </iframe>
+  </div>
 </div>
