--- a/app/views/layouts/_nav_dev.html.erb
+++ b/app/views/layouts/_nav_dev.html.erb
@@ -27,11 +27,7 @@
             <ul class="nav navbar-nav navbar-right">
               <li class="game-search">
                   <span class="glyphicon glyphicon-search text-right" id="search"></span>
-                  <%= form_tag('/games', method: 'get', role: 'search', class: 'form-group', id: 'search-wrapper') %>
-                  
-                      <input type="text" name="search_main" class="form-control" name="search" placeholder="Search for a game or a studio" id="search-bar">
-                      <button type="submit" class="btn btn-default" style="display: none">Submit</button>
-                  </form>
+                  <%= render 'layouts/form_search' %>
               </li>
               <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" style="color: white" aria-expanded="false">
