--- a/app/views/layouts/_nav_gamer.html.erb
+++ b/app/views/layouts/_nav_gamer.html.erb
@@ -19,6 +19,10 @@
               </li>
               </ul>
             <ul class="nav navbar-nav navbar-right">
+              <li class="game-search">
+                <span class="glyphicon glyphicon-search text-right" id="search"></span>
+                <%= render 'layouts/form_search' %>
+              </li>
                 <% if user_signed_in? %>
                 <li>
                   <a>Welcome, <%= current_user.company %></a>
@@ -32,15 +36,9 @@
                   </li>
                 <% else %>
                   <li><%= link_to "Log-in", new_session_path %></li>
-                  <li><%= link_to "Register", new_user_path %></li>
+                  <li><%= link_to "Register", new_user_path, class: "btn btn-primary small" %></li>
                 <% end %>
-                <li class="game-search">
-                  <span class="glyphicon glyphicon-search text-right" id="search"></span>
-                  <form id="search-wrapper" action="/games" method="get">
-                    <input type="text" name="search_main" class="form-control" name="search" placeholder="Search for a game or a studio" id="search-bar">
-                    <button type="submit" class="btn btn-default" style="display: none">Submit</button>
-                  </form>
-                </li>
+
             </ul>
         </div>
     </div>
