--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "mixins";
 
 .resp{
 width: 100%;
@@ -420,4 +421,30 @@ body{
 
 .moved {
   top: 50px !important;
+}
+
+.panel-result{
+  background: #92c9e1;
+  border: 1px solid white;
+  border-bottom: solid 4px black;
+  min-height: 480px;
+  margin-bottom: 20px;
+  position: relative;
+  color: #333;
+  @include box-shadow(-3px, 3px, 21px, rgba(#242424, 0.25));
+
+  .img{
+    border: solid 2px white;
+    margin: 19px 5px;
+    @include box-shadow(-3px, 3px, 21px, rgba(#242424, 0.65));
+    img{
+      width: 100%;
+    }
+  }
+
+  .status{
+    position: absolute;
+    bottom: 0px;
+    width: 91%;
+  }
 }
