--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -60,13 +60,12 @@
                                   <%= t.name %>
                               </p>
                               <% end %>
-                              <p class="game-status" style="color: #45A056; font-weight: bold; margin-top: 15px;"><%= g.status.name %></p>
+                                <p class="game-aasm_state" style="color: #45A056; font-weight: bold; margin-top: 15px;"><%= g.aasm_state %></p>
                           </div>
                       </div>
                   </div>
                   <% end %>
                   <% end %>
-
                 </div>
             </div>
         </div>
