--- a/app/views/games/_index_admin.html.erb
+++ b/app/views/games/_index_admin.html.erb
@@ -14,7 +14,7 @@
                     <%= t.name %>
                 </p>
                 <% end %>
-                <p class="game-status" style="color: #45A056; font-weight: bold margin-top: 15px;"><%= g.status.name %></p>
+            <p class="game-aasm_state" style="color: #45A056; font-weight: bold; margin-top: 15px;"><%= g.aasm_state %></p>
             </div>
         </div>
     </div>
